# gbemu-rust

./: .gitignore  .gitmodules  001-introduction.html  100-gameboy.html  200-code.html  300-testing.html  Cargo.toml  README.md  flake.nix  index.html  print.html  searchindex.js  toc.html  toc.js
.github/workflows/: build-and-test.yml  build-test-deploy.yml  deploy.yml
app/: gbemu_rust_app.js  gbemu_rust_app_bg.wasm  index.html
benches/: bench_step.rs
code-coverage-report/: index.html
code-coverage-report/coverage/home/runner/work/gbemu-rust/gbemu-rust/gbemu_rust_app/src/: app.rs.html  main.rs.html
code-coverage-report/coverage/home/runner/work/gbemu-rust/gbemu-rust/gbemu_rust_lib/src/: cartridge.rs.html  cpu.rs.html  emulator.rs.html  graphics.rs.html  joypad.rs.html  (+4 more)
code-coverage-report/coverage/home/runner/work/gbemu-rust/gbemu-rust/src/: cartridge.rs.html  cpu.rs.html  emulator.rs.html  graphics.rs.html  memory.rs.html  serial.rs.html  timer.rs.html
coverage/: index.html
docs/src/: 300-testing.md
gbemu_rust_app/: Cargo.toml  Trunk.toml  index.html
gbemu_rust_app/src/: app.rs  main.rs
gbemu_rust_app/src/app/: action.rs  gbemu_wgpu.rs  input.rs  stats.rs  task.rs
gbemu_rust_lib/: Cargo.toml
gbemu_rust_lib/benches/: bench_step.rs
gbemu_rust_lib/src/: cpu.rs  emulator.rs  graphics.rs  joypad.rs  lib.rs  memory.rs  serial.rs  system.rs  timer.rs
gbemu_rust_lib/src/cpu/: alu.rs  instructions.rs  interrupts.rs  registers.rs
gbemu_rust_lib/src/cpu/tests/: arithmetics.rs  blargg.rs
gbemu_rust_lib/src/graphics/: object.rs  registers.rs  renderer.rs  tile.rs
gbemu_rust_lib/src/memory/: mmu.rs
gbemu_rust_lib/src/memory/mbc/: mbc1.rs
gbemu_rust_lib/src/tests/: mod.rs
gbemu_rust_lib/src/utils/: bit_operations.rs
gbemu_rust_lib/tests/: arithmetics.rs  blargg_cpu_instrs_full.rs  blargg_cpu_instrs_individual.rs
gbemu_rust_lib/tests/helpers/: mod.rs
pr/coverage/pr-1/: index.html
pr/coverage/pr-2/: index.html
pr/coverage/pr-3/: index.html
pr/pr-10/: 200-code.html
pr/pr-10/code-coverage-report/: index.html
pr/pr-11/code-coverage-report/: index.html
pr/pr-12/: book.toml
pr/pr-12/code-coverage-report/: index.html
pr/pr-12/src/: 001-introduction.md
pr/pr-13/: toc.html
pr/pr-13/code-coverage-report/: index.html
pr/pr-14/app/: gbemu_rust_app_bg.wasm  index.html
pr/pr-14/code-coverage-report/: index.html
pr/pr-15/app/: index.html
pr/pr-15/code-coverage-report/: index.html
pr/pr-16/app/: index.html
pr/pr-16/code-coverage-report/: index.html
pr/pr-16/src/: SUMMARY.md
pr/pr-17/: searchindex.js
pr/pr-17/app/: index.html
pr/pr-17/code-coverage-report/: index.html
pr/pr-17/src/: 300-testing.md
pr/pr-18/: 001-introduction.html  100-gameboy.html  300-testing.html  print.html  searchindex.js
pr/pr-18/app/: gbemu_rust_app.js  gbemu_rust_app_bg.wasm  index.html  sw.js
pr/pr-18/code-coverage-report/: index.html
pr/pr-18/src/: 001-introduction.md
pr/pr-19/: 404.html
pr/pr-19/app/: gbemu_rust_app_bg.wasm  index.html  manifest.json  sw.js
pr/pr-19/code-coverage-report/: index.html
pr/pr-20/app/: index.html
pr/pr-20/code-coverage-report/: index.html
pr/pr-21/: 404.html
pr/pr-21/app/: gbemu_rust_app.js  gbemu_rust_app_bg.wasm  index.html
pr/pr-21/code-coverage-report/: index.html
pr/pr-21/src/: 200-code.md
pr/pr-5/: 01-introduction.html  index.html  print.html  searchindex.js  toc.html  toc.js
pr/pr-5/code-coverage-report/: index.html
pr/pr-5/src/: 01-introduction.md
pr/pr-6/: print.html  searchindex.js
pr/pr-6/code-coverage-report/: index.html
pr/pr-7/: 01-introduction.html
pr/pr-7/code-coverage-report/: index.html
pr/pr-7/src/: SUMMARY.md
pr/pr-8/: toc.js
pr/pr-8/code-coverage-report/: index.html
pr/pr-9/: 100-gameboy.html  300-testing.html  404.html
pr/pr-9/code-coverage-report/: index.html
src/: 300-testing.md  SUMMARY.md  cartridge.rs  cpu.rs  emulator.rs  graphics.rs  lib.rs  main.rs  memory.rs  serial.rs  timer.rs
src/cpu/: alu.rs  arithmetic.rs  instructions.rs  interrupts.rs  mod.rs  registers.rs
src/cpu/tests/: arithmetics.rs  blargg.rs  mod.rs
src/memory/: mbc.rs  mmu.rs  mod.rs
src/memory/mbc/: mbc0.rs  mbc1.rs
src/memory/mbcs/: mod.rs  rom_only.rs
src/tests/: blargg.rs  mod.rs  test_cpu_memory.rs
src/utils/: half_carry.rs  mod.rs
tests/: test_cpu_memory.rs
(+375 files in other folders)
