[package]
name = "gbemu_rust"
version = "0.1.0"
edition = "2024"

[profile.dev]
opt-level = 0

[profile.test]
opt-level = 3

[profile.bench]
opt-level = 3

[profile.release]
opt-level = 3

[dependencies]
regex = "1.11.1"
tracing = "0.1.41"
tracing-appender = "0.2.3"
tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }
