[workspace]
resolver = "2"
members = ["gbemu_rust_app", "gbemu_rust_lib"]

[workspace.dependencies]
tracing = "0.1.41"
tracing-log = "0.2.0"
tracing-core = "0.1.33"
tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }
regex = "1.11.1"
criterion = "0.6.0"

[profile.dev.package."*"]
opt-level = 2

[profile.release]
opt-level = 2
