[package]
name = "gbemu_rust_app"
version = "0.1.0"
edition = "2024"

[dependencies]
criterion.workspace = true
regex.workspace = true
tracing.workspace = true
tracing-appender.workspace = true
tracing-core.workspace = true
tracing-subscriber.workspace = true
serde.workspace = true
gbemu_rust_lib = { path = "../gbemu_rust_lib" }

eframe = { version = "0.31", default-features = false, features = [
  "default_fonts",
  "wgpu",
  "wayland",
  "x11",
] }
egui = "0.31"
