[package]
name = "gbemu_rust_app"
version = "0.1.0"
edition = "2024"

[features]
default = []

[dependencies]
egui = "0.31.1"
eframe = { version = "0.31.1", default-features = false, features = [
  "default_fonts",
  "wgpu",
  "wayland",
  "x11",
] }
log = "0.4.27"
tracing-log = "0.2.0"

gbemu_rust_lib = { path = "../gbemu_rust_lib" }
tracing.workspace = true
tracing-appender.workspace = true
tracing-core.workspace = true
tracing-subscriber.workspace = true

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]

[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen-futures = "0.4.50"
web-sys = "0.3.77"
tracing-web = "0.1.3"

[profile.dev.package."*"]
opt-level = 2

[profile.release]
opt-level = 2
