[package]
name = "gbemu_rust_app"
version = "0.1.0"
edition = "2024"

[features]
default = []

[dependencies]
gbemu_rust_lib = { path = "../gbemu_rust_lib" }

egui = "0.31.1"
eframe = { version = "0.31.1", default-features = false, features = [
  "default_fonts",
  "wgpu",
  "wayland",
  "x11",
] }

log = "0.4.27"
tracing.workspace = true
tracing-log.workspace = true
tracing-core.workspace = true
tracing-subscriber.workspace = true
bytemuck = "1.23.1"
rfd = "0.15.3"
clap = { version = "4.5.40", features = ["derive"] }

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
tokio = { version = "1.45.1", features = ["rt-multi-thread", "macros"] }
poll-promise = { version = "0.3.0", features = ["tokio"] }

[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen-futures = "0.4.50"
web-sys = "0.3.77"
tracing-web = "0.1.3"
poll-promise = { version = "0.3.0", features = ["web"] }
