[package]
name = "gbemu_rust_lib"
version = "0.1.0"
edition = "2024"

[features]
default = []
nogfx = []

[[bench]]
name = "bench_step"
harness = false

[[test]]
name = "blargg_cpu_instrs_individual"
required-features = ["nogfx"]

[profile.dev.package."*"]
opt-level = 2

[profile.release]
opt-level = 2

[dependencies]
tracing.workspace = true

[dev-dependencies]
regex.workspace = true
criterion.workspace = true
tracing-core.workspace = true
tracing-subscriber.workspace = true
